export build artifact in core package + setup default ContractVerifier using build artifact
Signed-off-by: Paul Balaji <paul@hyperlane.xyz>

--- a/solidity/package.json
+++ b/solidity/package.json
@@ -31,6 +31,7 @@
     "test": "test"
   },
   "files": [
+    "/buildInfo.json",
     "/dist",
     "/contracts",
     "/interfaces",
@@ -45,7 +46,7 @@
   "main": "dist/index.js",
   "repository": "https://github.com/hyperlane-xyz/hyperlane-monorepo",
   "scripts": {
-    "build": "hardhat compile && tsc",
+    "build": "hardhat compile && ./exportBuildArtifact.sh && tsc",
     "lint": "solhint contracts/**/*.sol",
     "clean": "hardhat clean && rm -rf ./dist ./cache ./types ./coverage",
     "coverage": "./coverage.sh",
