--- a/solidity/package.json
+++ b/solidity/package.json
@@ -45,7 +45,7 @@
   "main": "dist/index.js",
   "repository": "https://github.com/hyperlane-xyz/hyperlane-monorepo",
   "scripts": {
-    "build": "hardhat compile && tsc",
+    "build": "hardhat compile && hardhat export-build-artifact && tsc",
     "lint": "solhint contracts/**/*.sol",
     "clean": "hardhat clean && rm -rf ./dist ./cache ./types ./coverage",
     "coverage": "./coverage.sh",
